--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/vite": "^4.1.13",
+    "chart.js": "^4.5.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^17.0.2",
     "react-icons": "^5.5.0",
     "react-placeholder": "^4.1.0",
+    "react-syntax-highlighter": "^15.6.6",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
